--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express-session": "^1.18.2"
   }
 }
+
